--- a/src/styles/gameplay.css
+++ b/src/styles/gameplay.css
@@ -1,3 +1,12 @@
+.game-play {
+    border: 1px solid black;
+    padding: 16px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 16px;
+}
+
 .game-card {
     background-repeat: no-repeat;
     background-position: center;
